[metadata]
name = seeds_classification
summary = DEEP as a Service (DEEPaaS) is a REST API to expose a 
	machine learning model through a REST API.
description-file =
    README.md
author = Ignacio Heredia
author-email = aloga@ifca.unican.es
license = Apache-2
home-page = http://github.com/IFCA/seeds_classification
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    seeds_classification

[entry_points]

deepaas.model =
    seeds_classification = seeds_classification.api
